<resources>

    <string-array name="grades">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

    <string name="app_name">QuickOK</string>

    <!-- General -->

    <string name="required">Required</string>

    <!-- Loader -->

    <string name="loading">Loading</string>
    <string name="wait_while_loading">Wait while loading...</string>

    <!-- Navigation -->

    <string name="nav_logout">Logout</string>

    <!-- Login -->

    <string name="login">Login</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="please_enter_valid_email">Please enter valid email</string>
    <string name="please_enter_valid_password">Please enter valid password</string>
    <string name="dont_have_an_account">Don\'t have an account? </string>
    <string name="register_here"> Register here</string>
    <string name="please_check_your_email_and_password">Please check your email and password</string>

    <!-- Registration -->

    <string name="registration">Registration</string>
    <string name="have_an_account">Have an account?</string>
    <string name="login_here">Login here!</string>
    <string name="first_name_hint">First name</string>
    <string name="last_name_hint">Last name</string>
    <string name="user_exists">User with this email exists</string>
    <string name="title_activity_maps">Map</string>

</resources>