<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <LinearLayout
        xmlns:tools="http://schemas.android.com/tools"
        style="@style/LinearLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_vertical"
        tools:context=".ui.login.LoginActivity">

        <ImageView
            android:layout_width = "wrap_content"
            android:layout_height = "wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:src="@drawable/splash_logo"
        />

        <TextView
            style="@style/QuickOK_ActivityTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
        />

        <EditText
            android:id = "@+id/email_login"
            style="@style/QuickOK_EditTextStyle"
            android:hint="@string/email_hint"
        />

        <TextView
            android:id="@+id/email_error_login"
            style="@style/QuickOK_EditTextErrorStyle"
        />

        <EditText
            android:id = "@+id/password_login"
            style="@style/QuickOK_EditTextStyle"
            android:inputType = "textPassword"
            android:hint="@string/password_hint"
        />

        <TextView
            android:id="@+id/password_error_login"
            style="@style/QuickOK_EditTextErrorStyle"
        />

        <Button
            android:id = "@+id/login"
            style="@style/QuickOK_Button"
            android:text = "@string/login"
            android:onClick="onClickLogin"
        />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginTop="5dp"
        >

            <TextView
                android:textAlignment="center"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="2dp"
                android:textColor="@color/text"
                android:text="@string/dont_have_an_account"
            />

            <TextView
                android:textAlignment="center"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textColor="@color/link"
                android:text="@string/register_here"
                android:onClick="onClickRegister"
            />

        </LinearLayout>

    </LinearLayout>
</ScrollView>